sources/demo/omnipay-k8s-ops/kustomize/event-projections-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-projections
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-projections
  template:
    metadata:
      labels:
        app: event-projections
    spec:
      containers:
        - name: event-projections
          image: ghcr.io/knowledgeforge-demos/omnipay-event-projections:1.0.0
          ports:
            - containerPort: 8080
