sources/demo/omnipay-k8s-ops/kustomize/risk-streams-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: risk-streams
spec:
  replicas: 1
  selector:
    matchLabels:
      app: risk-streams
  template:
    metadata:
      labels:
        app: risk-streams
    spec:
      containers:
        - name: risk-streams
          image: ghcr.io/knowledgeforge-demos/omnipay-risk-streams:1.0.0
